--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "time-bank-api-spec"]
 	path = time-bank-api-spec
 	url = https://github.com/Metatavu/time-bank-api-spec
+[submodule "home-lambdas-api-spec"]
+	path = home-lambdas-api-spec
+	url = https://github.com/Metatavu/home-lambdas-API-spec
